syntax = "proto3";

package manager.api.menu;

option go_package = ".;menu";
option java_multiple_files = true;
option java_package = "manager.api.menu";

import "api/menu/proto/menu.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Menu{

  // ListMenu 获取菜单信息列表
  rpc ListCurrentMenu (ListCurrentMenuRequest) returns (ListMenuReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/current/menus",
    };
  }

  // ListMenu 获取菜单信息列表
  rpc ListMenu (ListMenuRequest) returns (ListMenuReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/menus",
    };
  }

  // CreateMenu 创建菜单信息
  rpc CreateMenu (CreateMenuRequest) returns (CreateMenuReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/menu",
      body: "*"
    };
  }

  // UpdateMenu 更新菜单信息
  rpc UpdateMenu (UpdateMenuRequest) returns (UpdateMenuReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/menu",
      body: "*"
    };
  }

  // DeleteMenu 删除菜单信息
  rpc DeleteMenu (DeleteMenuRequest) returns (DeleteMenuReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/menu",
    };
  }

}